fix/card: increase img on hover; on mobile <340px without horizontal scrolling

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -63,7 +63,7 @@ button {
   font-weight: 700;
   font-size: 16px;
   line-height: 56px;
-  letter-spacing: 0px;
+  letter-spacing: 0;
   text-align: center;
   color: $color-bg;
 }
@@ -74,7 +74,7 @@ textarea {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: 0px;
+  letter-spacing: 0;
   color: $color-font-input;
 
   &::placeholder {
@@ -82,7 +82,7 @@ textarea {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    letter-spacing: 0px;
+    letter-spacing: 0;
     color: $color-font-placeholder;
   }
 }
@@ -93,7 +93,7 @@ textarea {
     font-weight: 400;
     font-size: 14px;
     line-height: 140%;
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 
   &--large {
@@ -101,6 +101,6 @@ textarea {
     font-weight: 500;
     font-size: 16px;
     line-height: 140%;
-    letter-spacing: 0px;
+    letter-spacing: 0;
   }
 }
