--- a/src/styles/blocks/_card.scss
+++ b/src/styles/blocks/_card.scss
@@ -1,6 +1,6 @@
 .card {
-  width: 324;
-  height: 446;
+  width: 100%;
+  max-width: 324px;
   grid-column: 1/3;
   justify-self: center;
   background-color: transparent;
@@ -18,8 +18,8 @@
   }
 
   &__image {
-    width: 324;
-    height: 256;
+    width: 100%;
+    aspect-ratio: 324 / 256;
     overflow: hidden;
     margin-bottom: 32px;
   }
@@ -60,6 +60,21 @@
   }
 
   @include on-desktop {
+    width: 324px;
     grid-column: unset;
+
+    &__image-img {
+      transform: scale(1);
+
+      @include transition-custom(transform);
+    }
+
+    &__link {
+      &:hover {
+        .card__image-img {
+          transform: scale(1.05);
+        }
+      }
+    }
   }
 }
