--- a/src/styles/blocks/_photoline.scss
+++ b/src/styles/blocks/_photoline.scss
@@ -76,7 +76,21 @@
   }
 
   @include on-desktop {
+    &__image {
+      transform: scale(1);
+
+      @include transition-custom(transform);
+    }
+
     &__item {
+      overflow: hidden;
+
+      &:hover {
+        .photoline__image {
+          transform: scale(1.05);
+        }
+      }
+
       &--square {
         aspect-ratio: 324 / 320;
       }
