--- a/src/styles/utilites/_variables.scss
+++ b/src/styles/utilites/_variables.scss
@@ -10,28 +10,27 @@ $font-size: 23px;
 $line-height: 1.4;
 $transition-duration: 0.3s;
 $transition-function: ease;
+
 // ==================
 // Base colors
 // ==================
-$color-white: #ffffff;
+$color-white: #fff;
 $color-black: #1d1d1d;
 $color-gray-100: #f8f8fa;
 $color-gray-200: #c2c2c2;
 $color-gray-300: #7e7e83;
-$color-gray-400: #555555;
+$color-gray-400: #555;
 $color-gray-500: #292929;
+
 // ==================
 // Semantic colors
 // ==================
 $color-font: $color-white;
 $color-bg: $color-black;
-
 $color-bg-menu: $color-gray-200;
 $color-font-menu: $color-black;
 $color-font-menu-hover: $color-gray-400;
-
 $color-bg-button: $color-white;
-
 $color-bg-input: $color-gray-100;
 $color-font-input: $color-gray-500;
 $color-font-placeholder: $color-gray-300;
